syntax = "proto3";

package grpc;

option go_package = "github.com/Cam1256/01_12_2022/proto";

service AuthorizationService {
    rpc ReadAllPolicies(ReadAllPoliciesRequest) returns (ReadAllPoliciesResponse) {}
    
}

message ReadAllPoliciesRequest {
    string link = 1;
}

message ReadAllPoliciesResponse {
    string response = 1;
}